# rabbitmq-python-sample

./: README.md  README.rst
aioamqp/: README.md  consumer.py  producer.py  pyproject.toml
aioamqp/amqp_demo/: consumer.py  producer.py
asynqp/: consumer.py  requirements.txt
pika/: Makefile
pika/src/: consumer.py  pika_utils.py  producer.py
src/: consumer.py  pika_utils.py  producer.py
