[tool.poetry]
name = "amqp_demo"
version = "0.1.0"
description = "aioamqp example"
authors = ["Povilas Balciunas <balciunas90@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aioamqp = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
